<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".WelcomeFragment">
    <!-- we use linear layout in simple views and here I use two textview and a button-->
    <LinearLayout
        android:id="@+id/welcome_linear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginBottom="16dp"
        android:orientation="vertical"
        android:padding="@dimen/activity_main_margin">

        <TextView
            android:id="@+id/welcome_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="32dp"
            android:text="@string/welcome"
            android:textColor="@color/purple_700"
            android:textSize="48sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/discription_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:text="@string/welcome_in_our_shoe_app"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/next_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="48dp"
            android:layout_marginEnd="16dp"
            android:text="@string/next_button" />
    </LinearLayout>
</layout>

